--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#2563eb" />
   <meta name="description" content="Adil Shoes House - Premium Quality Shoes at Best Prices" />
-  <title>Adil Shoes House</title>
+  <title>Shoes House</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
